--- a/config/services.yaml
+++ b/config/services.yaml
@@ -5,6 +5,10 @@
 # https://symfony.com/doc/current/best_practices.html#use-parameters-for-application-configuration
 parameters:
     images_directory: '%kernel.project_dir%/public/uploads/images'
+
+    akismet_api_key: 'e2562a2da9d6'  # Remplace par ta vraie clé API
+    akismet_blog_url: 'http://127.0.0.1:8000'  # Remplace par l'URL de ton site
+
 services:
     # default configuration for services in *this* file
     _defaults:
@@ -22,3 +26,8 @@ services:
 
     # add more service definitions when explicit configuration is needed
     # please note that last definitions always *replace* previous ones
+
+    App\Service\AkismetService:
+        arguments:
+            $apiKey: '%akismet_api_key%'
+            $blogUrl: '%akismet_blog_url%'
