first+back+bundle

--- a/.env
+++ b/.env
@@ -37,7 +37,7 @@ MESSENGER_TRANSPORT_DSN=doctrine://default?auto_setup=0
 ###< symfony/messenger ###
 
 ###> symfony/mailer ###
-MAILER_DSN=null://null
+#MAILER_DSN=null://null
 ###< symfony/mailer ###
 
 ###> karser/karser-recaptcha3-bundle ###
@@ -45,3 +45,8 @@ MAILER_DSN=null://null
 RECAPTCHA3_KEY=6LeLhuMqAAAAAI87UiB7ytpBp52b8YHl9kImsw8C
 RECAPTCHA3_SECRET=6LeLhuMqAAAAAOA90SJ5UTte6_ZJjPZjdOSblS7b
 ###< karser/karser-recaptcha3-bundle ###
+
+###> symfony/google-mailer ###
+# Gmail SHOULD NOT be used on production, use it in development only.
+MAILER_DSN=gmail://kingamine242@gmail.com:blvnarhihkrzavrl@default?verify_peer=0
+###< symfony/google-mailer ###
