--- a/config/services.yaml
+++ b/config/services.yaml
@@ -11,6 +11,13 @@ services:
         autowire: true      # Automatically injects dependencies in your services.
         autoconfigure: true # Automatically registers your services as commands, event subscribers, etc.
 
+    App\Service\MailerService:
+         autowire: true
+         autoconfigure: true
+         arguments:
+            $from: '%env'
+            $replyTo: 'kingamine242@gmail.com'
+
     # makes classes in src/ available to be used as services
     # this creates a service per class whose id is the fully-qualified class name
     App\:
