--- a/config/services.yaml
+++ b/config/services.yaml
@@ -1,4 +1,7 @@
 parameters:
+    stripe_public_key: '%env(STRIPE_PUBLIC_KEY)%'
+    stripe_secret_key: '%env(STRIPE_SECRET_KEY)%'
+    stripe_webhook_secret: '%env(STRIPE_WEBHOOK_SECRET)%'
     uploads_directory: '%kernel.project_dir%/public/uploads'
 
 services:
@@ -6,21 +9,30 @@ services:
     _defaults:
         autowire: true      # Automatically injects dependencies in your services.
         autoconfigure: true # Automatically registers your services as commands, event subscribers, etc.
-        #bind:
-            #$session: '@session'
 
-    # Explicit definition for CartService
-    Symfony\Component\HttpFoundation\Session\SessionInterface: '@session'
-
-    # Make all classes in src/ available as services
+    # Define the namespace for autowiring
     App\:
-        resource: '../src/'
-        exclude:
-            - '../src/DependencyInjection/'
-            - '../src/Entity/'
-            - '../src/Kernel.php'
+        resource: '../src/*'
+        exclude: '../src/{DependencyInjection,Entity,Tests,Kernel.php}'
 
-    # StripeService definition
+    App\Controller\:
+        resource: '../src/Controller'
+        tags: ['controller.service_arguments']
+
+    # Inject the Stripe service with the parameters
     App\Service\StripeService:
         arguments:
-            $stripeSecretKey: '%env(STRIPE_SECRET_KEY)%'
+            $params: '@parameter_bag'
+            $entityManager: '@doctrine.orm.entity_manager'
+            $requestStack: '@request_stack'
+    
+    # Add the ProductRepository explicitly if needed
+    App\Repository\ProductRepository:
+        tags: ['doctrine.repository_service']
+
+    # Explicitly inject the SessionInterface for CustomerController
+    App\Controller\CustomerController:
+        arguments:
+            $entityManager: '@doctrine.orm.entity_manager'
+            $stripeService: '@App\Service\StripeService'
+            $requestStack: '@request_stack'
