--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -1,6 +1,3 @@
-# config/routes.yaml
 controllers:
-    resource:
-        path: ../src/Controller/
-        namespace: App\Controller
+    resource: '../src/Controller/'
     type: attribute
