--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,9 @@
         "doctrine/doctrine-migrations-bundle": "^3.4",
         "doctrine/orm": "^3.3",
         "gedmo/doctrine-extensions": "^3.19",
+        "khill/lavacharts": "^3.1",
         "knplabs/knp-paginator-bundle": "^6.6",
+        "php-translation/symfony-bundle": "^0.15.0",
         "phpdocumentor/reflection-docblock": "^5.6",
         "phpstan/phpdoc-parser": "^2.0",
         "stof/doctrine-extensions-bundle": "^1.13",
