--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -3,3 +3,6 @@ controllers:
         path: ../src/Controller/
         namespace: App\Controller
     type: attribute
+admin_stats:
+    path: /admin/stats
+    controller: App\Controller\AdminStatsController::dashboard
