--- a/.env
+++ b/.env
@@ -25,7 +25,7 @@ APP_SECRET=d712be4122997c86d921def4abf4a003
 # IMPORTANT: You MUST configure your server version, either here or in config/packages/doctrine.yaml
 #
 # DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
- DATABASE_URL="mysql://root:@127.0.0.1:3306/WorldCulturaaa"
+ DATABASE_URL="mysql://root:@127.0.0.1:3306/module_reclamation"
 # DATABASE_URL="mysql://root:@127.0.0.1:3306/WorldCultura?serverVersion=10.11.2-MariaDB&charset=utf8mb4"
 # DATABASE_URL="postgresql://worldCultura:@127.0.0.1:5432/WorldCultura?serverVersion=16&charset=utf8"
 ###< doctrine/doctrine-bundle ###
